[package]
name = "sib"
version = "0.0.10"
authors = ["mail@pooya.ai"]
description = "A high-performance, secure, and cross-platform modules optimized for efficiency, scalability, and reliability."
documentation = "https://docs.rs/sib"
edition = "2024"
keywords = ["sib", "networking", "real-time", "streaming", "web"]
license = "Apache-2.0"
repository = "https://github.com/PooyaEimandar/sib"
categories = ["development-tools"]
readme = "README.md"

[lib]
path = "src/lib.rs"
crate-type = ["rlib", "staticlib", "cdylib"]

[dependencies]
arc-swap = { version = "1.7.1", optional = true, default-features = false }
boring = { version = "4.17.0", optional = true }
brotli = { version = "8.0.2", optional = true, default-features = false, features = [
    "std",
] }
bytes = { version = "1.10.1", optional = true, default-features = false }
cfg-if = { version = "1.0.3", default-features = false }
crossbeam = { version = "0.8.4", optional = true, default-features = false, features = [
    "std",
] }
dashmap = { version = "6.1.0", optional = true, default-features = false, features = [
    "rayon",
] }
flate2 = { version = "1.1.2", optional = true, default-features = false, features = [
    "rust_backend",
] }
glib = { version = "0.21.1", optional = true, default-features = false, features = [
    "gio",
] }
gstreamer = { version = "0.24.1", optional = true }
gstreamer-app = { version = "0.24.0", optional = true }
gstreamer-video = { version = "0.24.1", optional = true }
heapless = { version = "0.9.1", optional = true, default-features = false }
httparse = { version = "1.10.1", optional = true, default-features = false }
httpdate = { version = "1.0.3", optional = true, default-features = false }
itoa = { version = "1.0.15", default-features = false }
may = { version = "0.3.51", optional = true }
mime = { version = "0.3.17", optional = true }
mime_guess = { version = "2.0.5", optional = true }
memmap2 = { version = "0.9.8", optional = true, default-features = false }
once_cell = { version = "1.21.3", optional = true, default-features = false, features = [
    "std",
] }
quiche = { version = "0.24.5", optional = true, default-features = false, features = [
    "boringssl-vendored",
] }
ring = { version = "0.17.14", optional = true, default-features = false }
zstd = { version = "0.13.3", optional = true }

# only for macOS or linux
[target.'cfg(all(unix, not(target_os = "android"), not(target_os = "ios")))'.dependencies]
foundationdb-sys = { version = "0.9.1", optional = true, default-features = false, features = [
    "fdb-7_3",
] }

# # only for linux
# [target.'cfg(target_os = "linux")'.dependencies]
# io-uring = { version = "0.7.9", optional = true }
# nix = { version = "0.30.1", optional = true }

[features]
default = []
db-fdb = ["foundationdb-sys", "may"]
net-file-server = ["brotli", "flate2", "dashmap", "memmap2", "zstd"]
net-h1-server = [
    "arc-swap",
    "bytes",
    "dashmap",
    "heapless",
    "httpdate",
    "httparse",
    "may",
    "mime",
    "mime_guess",
    "once_cell",
]
net-h3-server = [
    "arc-swap",
    "bytes",
    "dashmap",
    "heapless",
    "httpdate",
    "httparse",
    "may",
    "mime",
    "mime_guess",
    "once_cell",
    "quiche",
    "ring",
]

stm-sender = ["crossbeam", "glib", "gstreamer", "gstreamer-video"]
stm-receiver = ["glib", "gstreamer", "gstreamer-app", "gstreamer-video"]
sys-boring-ssl = ["boring"]

[dev-dependencies]
num_cpus = { version = "1.16" }
dashmap = { version = "6.1.0", default-features = false, features = ["rayon"] }
rcgen = { version = "0.14.3" }
reqwest = { version = "0.12.23", default-features = false, features = [
    "http3",
] }
sha2 = { version = "0.10.9" }
base64 = { version = "0.22.1" }
tokio = { version = "1.47.0", default-features = false, features = [
    "macros",
    "rt",
] }

[build-dependencies]
chrono = { version = "0.4.40" }
